--- a/src/main/webapp/decorators/decorator.xhtml
+++ b/src/main/webapp/decorators/decorator.xhtml
@@ -27,7 +27,8 @@ Environmental damage caused by the use must be kept as small as possible.
         "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:r="http://www.tauschring-hamburg.org/public/ring">
 <h:head>
     <title>Tauschring Hamburg</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
