--- a/src/main/webapp/internal/account.xhtml
+++ b/src/main/webapp/internal/account.xhtml
@@ -26,7 +26,8 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:h="http://java.sun.com/jsf/html">
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:r="http://www.tauschring-hamburg.org/public/ring">
     <ui:define name="content">
 
         <div class="container">
@@ -43,10 +44,7 @@ Environmental damage caused by the use must be kept as small as possible.
                         <f:facet name="header">
                             <h:outputText value=""/>
                         </f:facet>
-
-                        <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{depotItem.other.id}">
-                            <img src="#{depotItem.other.gravatarUrl30}" alt="avatar #{depotItem.other.displayName}"/>
-                        </a>
+                        <r:gravatar user="#{depotItem.other}" size="30"/>
                     </p:column>
                     <p:column id="other" sortBy="#{depotItem.other.displayName}">
                         <f:facet name="header">
