--- a/src/main/webapp/ring.xhtml
+++ b/src/main/webapp/ring.xhtml
@@ -59,7 +59,7 @@ Environmental damage caused by the use must be kept as small as possible.
             </p>
 
             <p>
-                <a href="/documents/Tauschring-Hamburg-Unsere-Regeln1.pdf">
+                <a href="${pageContext.request.servletPath}/documents/Tauschring-Hamburg-Unsere-Regeln1.pdf">
                     Tauschring Hamburg – Unsere Regeln
                 </a>
             </p>
