--- a/src/main/webapp/who.xhtml
+++ b/src/main/webapp/who.xhtml
@@ -35,7 +35,7 @@
             </p>
 
             <p>
-                <a href="/documents/Tauschring-Hamburg-im-Hamburger-Abendblatt.pdf">
+                <a href="${pageContext.request.servletPath}/documents/Tauschring-Hamburg-im-Hamburger-Abendblatt.pdf">
                     Tauschring Hamburg im Hamburger Abendblatt
                 </a>
             </p>
