--- a/src/main/webapp/signUp.xhtml
+++ b/src/main/webapp/signUp.xhtml
@@ -33,7 +33,11 @@ Environmental damage caused by the use must be kept as small as possible.
         </p:panel>
 
         <p:panel header="Termine">
-            <p>Öffentliche Termine</p>
+            <p>
+                <a href="${pageContext.request.servletPath}/publicEvents.xhtml">
+                Öffentliche Termine
+                </a>
+            </p>
 
             <p>Infostände, Stammtische</p>
         </p:panel>
