--- a/src/main/webapp/publicEvents.xhtml
+++ b/src/main/webapp/publicEvents.xhtml
@@ -24,27 +24,31 @@ Environmental damage caused by the use must be kept as small as possible.
 <ui:composition template="/decorators/menuDecorator.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:r="http://www.tauschring-hamburg.org/public/ring"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:r="http://www.tauschring-hamburg.org/public/ring">
+                xmlns:h="http://java.sun.com/jsf/html">
     <ui:define name="contentWithMenu">
+        <p:panel header="Öffentliche Termine">
+            Mehr Termine sind im engelogten Bereich zu sehen.
+            <a href="${pageContext.request.servletPath}/signUp.xhtml">Werde Mitglied</a> und log dich ein.
+        </p:panel>
+        <ui:repeat value="#{publicEventModel.eventsToDisplay}" var="event">
+            <p:panel header="#{event.headLine}">
+                <h:panelGrid columns="2" columnClasses="column" cellpadding="5">
+                    <h:outputText value="Enladender:"/>
+                    <h:panelGroup>
+                        <r:gravatar user="#{event.user}" noName="true"/>
+                    </h:panelGroup>
+                    <h:outputText value="Zeit:"/>
+                    <h:outputText value="#{event.period}"/>
 
+                    <h:outputText value="Beschreibung:"/>
+                    <h:outputText value="#{event.content}"/>
 
-        #{r:activeMenu('dashboard')}
-        #{facesContext.viewRoot.viewId.substring(1)}
-        #{facesContext.viewRoot.viewId.startsWith('/dashboard')?'acticMenuItem':''}
-
-        <h:form>
-            <h:panelGrid columns="4" cellpadding="5">
-                <h:outputLabel for="name" value="Name:" style="font-weight:bold"/>
-
-                <p:inputText id="name" value="#{userSession.id}"/>
-
-                <p:commandButton value="Submit" update="display"/>
-
-                <h:outputText value="#{userSession.id}" id="display"/>
-            </h:panelGrid>
-
-        </h:form>
+                    <h:outputText value="Ort:"/>
+                    <h:outputText value="#{event.location}"/>
+                </h:panelGrid>
+            </p:panel>
+        </ui:repeat>
     </ui:define>
 </ui:composition>
