--- a/src/main/webapp/decorators/decorator.xhtml
+++ b/src/main/webapp/decorators/decorator.xhtml
@@ -23,8 +23,7 @@ Environmental damage caused by the use must be kept as small as possible.
 -->
 <html xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-        >
+      xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title>Tauschring Hamburg</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
