--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -34,6 +34,16 @@ Environmental damage caused by the use must be kept as small as possible.
 
             <p>echte Informationen erhällst du auf http://www.tauschring-hamburg.org/</p>
         </p:panel>
+        <p:panel header="Test Login">
+            <tr>
+                <td>ID:</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>password:</td>
+                <td>123</td>
+            </tr>
+        </p:panel>
 
         <p:panel header="Die wunderbare Welt des Tauschens" rendered="#{notLoggedIn}">
             <p>Herzlich Willkommen beim Tauschring Hamburg</p>
