hide testLogin when logged in

--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -34,7 +34,7 @@ Environmental damage caused by the use must be kept as small as possible.
 
             <p>echte Informationen erhällst du auf http://www.tauschring-hamburg.org/</p>
         </p:panel>
-        <p:panel header="Test Login">
+        <p:panel header="Test Login" rendered="#{notLoggedIn}">
             <tr>
                 <td>ID:</td>
                 <td>1</td>
