--- a/src/main/webapp/internal/transaction.xhtml
+++ b/src/main/webapp/internal/transaction.xhtml
@@ -43,7 +43,7 @@ Environmental damage caused by the use must be kept as small as possible.
                                      effect="fade" var="p" style="width:260px" filter="true"
                                      filterMatchMode="startsWith">
                         <f:selectItem itemLabel="Bitte wählen" itemValue=""/>
-                        <f:selectItems value="#{userModel.otherUsers}" var="potentialReceiver"
+                        <f:selectItems value="#{transactionCreator.otherUsers}" var="potentialReceiver"
                                        itemLabel="#{potentialReceiver.id}"
                                        itemValue="#{potentialReceiver}"/>
 
