--- a/src/main/webapp/logout/logout.xhtml
+++ b/src/main/webapp/logout/logout.xhtml
@@ -21,9 +21,8 @@ excluded.
 Environmental damage caused by the use must be kept as small as possible.
 
 -->
-<html
-        xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:p="http://primefaces.org/ui">
+<html xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title>Tauschring Hamburg</title>
     <h:outputStylesheet name="style/style.css"/>
