--- a/src/main/webapp/decorators/decorator.xhtml
+++ b/src/main/webapp/decorators/decorator.xhtml
@@ -58,19 +58,18 @@ Environmental damage caused by the use must be kept as small as possible.
 
 
             <div class="userStuff">
-                <h:form styleClass="loginForm" rendered="#{notLoggedIn}">
+                <h:form styleClass="loginForm" rendered="#{notLoggedIn}" id="loginForm">
                     ID
-                    <p:inputText id="name" value="#{userSession.id}" size="5"/>
+                    <p:inputText id="idOrEmail" value="#{userSession.idOrEmail}" size="5"/>
                     Passwort
-                    <p:inputText type="password" value="#{userSession.password}" size="6"/>
-                    <p:splitButton value="login" actionListener="#{userSession.login}"
-                                   ajax="false">
+                    <p:inputText type="password" value="#{userSession.password}" size="6" id="password"/>
+                    <p:splitButton value="login" actionListener="#{userSession.login}" ajax="false" id="loginButton">
                         <p:menuitem value="passwort vergessen" URL="/impressum.xhtml"/>
                     </p:splitButton>
                 </h:form>
 
 
-                <h:form rendered="#{loggedIn}" styleClass="loggedInHeader"
+                <h:form rendered="#{loggedIn}" styleClass="loggedInHeader" id="loggedInHeaderForm"
                         style="background-image: url('#{userSession.user.gravatarHeaderUrl51}')">
                     <p:splitButton value="Kontostand: #{userSession.user.balance}" url="/internal/account.xhtml"
                                    onclick="location='/internal/account.xhtml'">
