--- a/src/main/webapp/internal/members/user.xhtml
+++ b/src/main/webapp/internal/members/user.xhtml
@@ -116,8 +116,9 @@ Environmental damage caused by the use must be kept as small as possible.
             <h:outputText value="Kontostand:"/>
             <h:outputText value="#{userModel.selectedUser.balance}"/>
 
+            <!--todo limit positive negative-->
             <h:outputText value="limit:"/>
-            <h:outputText value="#{userModel.selectedUser.limit}"/>
+            <h:outputText value=""/>
 
             <h:outputText value="Ausstehende Gebühr:"/>
             <h:outputText value="#{userModel.selectedUser.euroBalance} €"/>
