birthday yearRange gesetzt

--- a/src/main/webapp/internal/members/user.xhtml
+++ b/src/main/webapp/internal/members/user.xhtml
@@ -187,7 +187,7 @@ Environmental damage caused by the use must be kept as small as possible.
             <h:outputText value="#{userModel.selectedUser.formattedBirthDay}"
                           rendered="#{userModel.otherAndFilled(userModel.selectedUser.birthDay)}"/>
             <p:calendar locale="de" pattern="dd.MM.yyyy" navigator="true" value="#{userModel.selectedUser.birthDay}" rendered=
-                    "#{userModel.me}" converter="midnightConverter"/>
+                    "#{userModel.me}" converter="midnightConverter" yearRange="1900:2010"/>
 
             <h:outputText value="Profil:" rendered="#{userModel.meOrFilled(userModel.selectedUser.profile)}"/>
             <h:outputText value="#{userModel.selectedUser.profile}"
